# CompilerPrincipleExp

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: functional-coverage.md  test-cases.md  work.md  任务要求.md  实践报告.md
src/: ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  lexer.l  main.cpp  parser.y  semantic.cpp  semantic.hpp
tests/: run_smoke.sh  run_tests.sh  stress_test.py  test_all.sh
tests/.linux-smoke/: smoke.elf  smoke.exec.elf  smoke.s  smoke.static.elf
tests/.runtime-smoke/: main.elf  main.low.elf  main.s  main64.elf
tests/milestone1/: block_comments.tc  identifier_whitespace.tc  unary.tc
tests/milestone2/: all_operators.tc  div_mod.tc  int_boundaries.tc  parentheses.tc  relational_all.tc  relational_logic.tc  unary_plus.tc
tests/milestone3/: assignment.tc  nested_shadowing.tc  scope_shadowing.tc  shadow_global.tc
tests/milestone4/: break_continue.tc  dangling_else.tc  dangling_else_inner_false.tc  direct_declaration.tc  empty_stmt.tc  if_else.tc  if_no_else.tc  if_no_else_false.tc  nested_loops.tc  nested_while.tc
tests/milestone5/: call_chain.tc  eight_params.tc  function_call.tc  global_const_chain.tc  global_mutation.tc  global_var_const.tc  nested_call_alignment.tc  nested_function_calls.tc  recursion.tc  three_params.tc  void_explicit_return.tc  void_function.tc
tests/milestone6/: constant_condition_return.tc  constant_while_return.tc  error_assign_const.tc  error_assign_global_const.tc  error_const_init_nonconst.tc  error_const_short_circuit_variable.tc  error_duplicate_parameter.tc  error_function_as_value.tc  (+12 more)
(+15 files in other folders)
